--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,11 +25,15 @@ dependencies:
     sdk: flutter
   floor: ^1.1.0
   syncfusion_flutter_calendar: ^19.2.57
+  numberpicker: ^2.0.1
+  image_picker: ^0.8.4
+  photo_view: ^0.12.0
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  multi_image_picker: ^4.8.01
 
 dev_dependencies:
   floor_generator: ^1.1.0
