--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,13 +30,15 @@ dependencies:
   photo_view: ^0.12.0
   flutter_absolute_path: ^1.0.6 
   carousel_slider: ^4.0.0 
+  permission_handler: ^8.1.6
+  
   
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  multi_image_picker: ^4.8.01
+  multi_image_picker2: ^5.0.2
   path_provider: ^2.0.3
 
 dev_dependencies:
