--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  multi_image_picker2: ^5.0.2
+  multi_image_picker: ^4.8.1
   path_provider: ^2.0.3
 
 dev_dependencies:
@@ -78,6 +78,7 @@ flutter:
     - assets/wallet/
     - assets/homepage/
     - assets/icons/
+    - assets/contact/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
