--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,12 @@ dependencies:
   permission_handler: ^8.1.6
   percent_indicator: ^3.0.1
   step_progress_indicator: ^1.0.1
+  shared_preferences: any
+  provider: ^5.0.0
+
+#localization
+  flutter_localizations :
+    sdk: flutter 
   
   
 
@@ -48,6 +54,7 @@ dev_dependencies:
   build_runner: ^2.0.0
   flutter_test:
     sdk: flutter
+
 
   # Bloc
   bloc: ^7.0.0
@@ -74,7 +81,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-  
+
+    - lib/common/lang/
     - assets/image_wallet/
     - assets/category/
     - assets/wallet/
