--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.0+1
+version: 2.0.0+2
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -35,6 +35,8 @@ dependencies:
   step_progress_indicator: ^1.0.1
   shared_preferences: any
   provider: ^5.0.0
+  syncfusion_flutter_datepicker: ^19.3.54
+  
   
 
 #localization
