--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   shared_preferences: any
   provider: ^5.0.0
   syncfusion_flutter_datepicker: ^19.3.54
+
+  
   
   
 
@@ -92,6 +94,7 @@ flutter:
     - assets/flag/
     - assets/homepage/
     - assets/contact/
+    - assets/Tasks/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
