--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 2.0.0+2
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: ">=2.14.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -36,6 +36,8 @@ dependencies:
   shared_preferences: any
   provider: ^5.0.0
   syncfusion_flutter_datepicker: ^19.3.54
+  omni_datetime_picker : ^0.0.4
+  flutter_advanced_switch : ^3.0.0+1
 
   
   
