--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,9 +28,9 @@ dependencies:
   numberpicker: ^2.0.1
   image_picker: ^0.8.4
   photo_view: ^0.12.0
-#  flutter_absolute_path: ^1.0.6
-  carousel_slider: ^4.0.0 
-  permission_handler: ^8.1.6
+  #  flutter_absolute_path: ^1.0.6
+  carousel_slider: ^4.0.0
+#  permission_handler: ^8.1.6
   percent_indicator: ^3.0.1
   step_progress_indicator: ^1.0.1
   shared_preferences: any
@@ -38,16 +38,20 @@ dependencies:
   syncfusion_flutter_datepicker: ^19.3.54
   omni_datetime_picker : ^0.0.4
   flutter_advanced_switch : ^3.0.0+1
+#  awesome_notifications: 0.6.21
+  flutter_local_notifications: ^7.0.0
+  device_info: ^2.0.1
+  flutter_native_timezone: ^2.0.0
+  rxdart: ^0.27.3
 
-  
-  
-  
 
-#localization
+
+
+  #localization
   flutter_localizations :
-    sdk: flutter 
-  
-  
+    sdk: flutter
+
+
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -71,7 +75,7 @@ dev_dependencies:
   intl: ^0.17.0
 
   flutter_form_builder: ^6.0.1
-  
+
 
 
 
